Fixed some layout bugs

--- a/src/ui/HighlightsCard/HighlightsCard.module.scss
+++ b/src/ui/HighlightsCard/HighlightsCard.module.scss
@@ -36,6 +36,7 @@
 
 	@media (min-width: $bp-xxl) {
 		grid-template-columns: repeat(4, 1fr);
+		grid-template-rows: 200px 200px 150px;
 		grid-template-areas:
 			'aqi				aqi				aqi					aqi'
 			'sun				sun				sun					sun'
